--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
   overflow: hidden;
   max-width: 600px;
   position: relative;
+  left: 50%;
+  transform: translateX(-300px);  
 }
 
 .carousel .carousel__item,
